hphp/test/zend/bad/ext/dom/tests/DOMComment_construct_error_001.php
<?php
$comment = new DOMComment("comment1", "comment2");
?>
